@@ -2,11 +2,11 @@
  * 
  * DO NOT EDIT THIS FILE   (fixincl.x)
  * 
- * It has been AutoGen-ed  January  9, 2012 at 11:55:38 PM by AutoGen 5.12
+ * It has been AutoGen-ed  March 26, 2012 at 10:53:21 AM by AutoGen 5.10
  * From the definitions    inclhack.def
  * and the template file   fixincl
  */
-/* DO NOT SVN-MERGE THIS FILE, EITHER Mon Jan  9 23:55:38 CET 2012
+/* DO NOT SVN-MERGE THIS FILE, EITHER Mon Mar 26 10:53:21 EDT 2012
  *
  * You must regenerate it.  Use the ./genfixes script.
  *
@@ -15,7 +15,7 @@
  * certain ANSI-incompatible system header files which are fixed to work
  * correctly with ANSI C and placed in a directory that GNU C will search.
  *
- * This file contains 223 fixup descriptions.
+ * This file contains 224 fixup descriptions.
  *
  * See README for more information.
  *
@@ -518,6 +518,43 @@ static tTestDesc aAix_ComplexTests[] = {
 static const char* apzAix_ComplexPatch[] = {
     "format",
     "#define _Complex_I (__extension__ 1.0iF)",
+    (char*)NULL };
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * *
+ *
+ *  Description of Aix_Malloc fix
+ */
+tSCC zAix_MallocName[] =
+     "aix_malloc";
+
+/*
+ *  File name selection pattern
+ */
+tSCC zAix_MallocList[] =
+  "malloc.h\0";
+/*
+ *  Machine/OS name selection pattern
+ */
+tSCC* apzAix_MallocMachs[] = {
+        "*-*-aix*",
+        (const char*)NULL };
+
+/*
+ *  content selection pattern - do fix if pattern found
+ */
+tSCC zAix_MallocSelect0[] =
+       "#ifdef __cplusplus";
+
+#define    AIX_MALLOC_TEST_CT  1
+static tTestDesc aAix_MallocTests[] = {
+  { TT_EGREP,    zAix_MallocSelect0, (regex_t*)NULL }, };
+
+/*
+ *  Fix Command Arguments for Aix_Malloc
+ */
+static const char* apzAix_MallocPatch[] = {
+    "format",
+    "#if (defined(__cplusplus) && defined(__IBMCPP__))",
     (char*)NULL };
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -9069,9 +9106,9 @@ static const char* apzX11_SprintfPatch[] = {
  *
  *  List of all fixes
  */
-#define REGEX_COUNT          265
+#define REGEX_COUNT          266
 #define MACH_LIST_SIZE_LIMIT 181
-#define FIX_COUNT            223
+#define FIX_COUNT            224
 
 /*
  *  Enumerate the fixes
@@ -9086,6 +9123,7 @@ typedef enum {
     AAB_SOLARIS_SYS_VARARGS_H_FIXIDX,
     AAB_SUN_MEMCPY_FIXIDX,
     AIX_COMPLEX_FIXIDX,
+    AIX_MALLOC_FIXIDX,
     AIX_NET_IF_ARP_FIXIDX,
     AIX_ONCE_INIT_1_FIXIDX,
     AIX_ONCE_INIT_2_FIXIDX,
@@ -9347,6 +9385,11 @@ tFixDesc fixDescList[ FIX_COUNT ] = {
      apzAix_ComplexMachs,
      AIX_COMPLEX_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
      aAix_ComplexTests,   apzAix_ComplexPatch, 0 },
+
+  {  zAix_MallocName,    zAix_MallocList,
+     apzAix_MallocMachs,
+     AIX_MALLOC_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
+     aAix_MallocTests,   apzAix_MallocPatch, 0 },
 
   {  zAix_Net_If_ArpName,    zAix_Net_If_ArpList,
      apzAix_Net_If_ArpMachs,
